--- a/calendar.html
+++ b/calendar.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Календарь дней рождений PG78</title>
-  <link rel="stylesheet" href="calendar_styles.css">
+  <link rel="stylesheet" href="pages/pgCALENDAR/calendar_styles.css">
 </head>
 <body>
   <div class="header-buttons">
@@ -37,7 +37,7 @@
     <div id="popup-content"></div>
   </div>
 
-  <script src="calendar_script.js"></script>
+  <script src="pages/pgCALENDAR/calendar_script.js"></script>
 </body>
 </html>
 
