--- a/calendar.html
+++ b/calendar.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="header-buttons">
-    <a href="https://jonibak2.github.io/pg78hub/" class="back-button">← Назад в хаб</a>
+    <a href="https://jonibak2.github.io/PG78HUB-REBORN/" class="back-button">← Назад в хаб</a>
     <a href="https://github.com/jonibak2" class="github-button">GitHub</a>
   </div>
 
@@ -40,4 +40,5 @@
   <script src="pages/pgCALENDAR/calendar_script.js"></script>
 </body>
 </html>
+
 
