--- a/PGA24.html
+++ b/PGA24.html
@@ -13,7 +13,7 @@
   <div class="spotlight"></div>
 
   <div class="header-left">
-    <a href="https://jonibak2.github.io/pg78hub/" class="back-button">← Назад в хаб</a>
+    <a href="https://jonibak2.github.io/PG78HUB-REBORN/" class="back-button">← Назад в хаб</a>
     <a href="https://github.com/jonibak2" class="github-button">Мой GitHub</a>
   </div>
 
@@ -136,3 +136,4 @@
   <script src="pages/pgAWARDS24/PGA24_script.js"></script>
 </body>
 </html>
+
