Modify index.html with new links and content
Updated links and added new content.

--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
   <div class="moon-phase" id="moonPhase"></div>
   <h1>🧭 Хаб PG78</h1>
   <div class="links">
-    <a class="link-card" href="https://jonibak2.github.io/birthday-calendar/">
+    <a class="link-card" href="https://jonibak2.github.io/PG78HUB-REBORN/calendar">
       <span>🎂 Календарь дней рождений</span>
       <div>Следи за праздниками ПГшеров</div>
     </a>
     
     <div class="split-container">
-      <a class="link-card" href="https://jonibak2.github.io/PGA23/">
+      <a class="link-card" href="https://jonibak2.github.io/PG78HUB-REBORN/PGA23">
         <span>🎇 PGA23</span>
         <div>Номинации 2023</div>
       </a>
-      <a class="link-card" href="https://jonibak2.github.io/PGA24/">
+      <a class="link-card" href="https://jonibak2.github.io/PG78HUB-REBORN/PGA24">
         <span>🩸 PGA24</span>
         <div>Номинации 2024</div>
       </a>
@@ -57,3 +57,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
