--- a/calendar.html
+++ b/calendar.html
@@ -6,39 +6,95 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Календарь дней рождений PG78</title>
   <link rel="stylesheet" href="pages/pgCALENDAR/calendar_styles.css">
+  <style>
+    /* Прелоадер только для календаря */
+    #calendar-loader {
+      position: fixed;
+      inset: 0;
+      background: #000;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      z-index: 9999;
+    }
+
+    #calendar-loader img {
+      max-width: 260px;
+      width: 80%;
+      height: auto;
+    }
+
+    .loader-bar {
+      width: 60%;
+      max-width: 420px;
+      height: 6px;
+      border-radius: 999px;
+      background: rgba(255, 255, 255, 0.15);
+      margin-top: 18px;
+      overflow: hidden;
+    }
+
+    .loader-progress {
+      height: 100%;
+      width: 0;
+      background: #ff0000;
+      animation: loaderProgress 1.5s linear forwards;
+    }
+
+    @keyframes loaderProgress {
+      from { width: 0; }
+      to { width: 100%; }
+    }
+
+    /* Контент страницы скрыт, пока идёт прелоадер */
+    #calendar-page-content {
+      display: none;
+    }
+  </style>
 </head>
 <body>
-  <div class="header-buttons">
-    <a href="https://jonibak2.github.io/PG78HUB-REBORN/" class="back-button">← Назад в хаб</a>
-    <a href="https://github.com/jonibak2" class="github-button">GitHub</a>
+  <div id="calendar-loader">
+    <img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExeWNuMXRjMzI2dHphd3RjejdzZGI3OGdqM3Jlenhqa3V3anY2c2M1NCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/GCj1YPjqcNErSJUr6R/giphy.gif" alt="Loading">
+    <div class="loader-bar">
+      <div class="loader-progress"></div>
+    </div>
   </div>
 
-  <main class="calendar-contain" style="max-width: 100%;">
-    <h1 style="text-align:center;margin-bottom:1rem;">Календарь дней рождений PG78</h1>
-    <div class="year-navigation">
-      <button id="prev-year">◀</button>
-      <span id="current-year"></span>
-      <button id="next-year">▶</button>
-    </div>
-    <div class="calendar-wrapper">
-      <aside class="calendar__sidebar">
-        <div class="content">
-          <h2 class="sidebar__heading">Ближайшие дни рождения</h2>
-          <ul id="upcoming-list" class="sidebar__list"></ul>
-        </div>
-      </aside>
-      <div id="all-calendars"></div>
-    </div>
-  </main>
+    <div id="calendar-page-content">
+      <div class="header-buttons">
+        <a href="https://jonibak2.github.io/PG78HUB-REBORN/" class="back-button glow-on-hover">← Назад в хаб</a>
+        <a href="https://github.com/jonibak2" class="github-button github-glow-btn" aria-label="GitHub">
+          <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="GitHub">
+        </a>
+      </div>
 
-  <div class="overlay" id="overlay"></div>
-  <div class="birthday-popup" id="birthday-popup">
-    <span class="close" id="close-popup">&times;</span>
-    <div id="popup-content"></div>
+    <main class="calendar-contain" style="max-width: 100%;">
+      <h1 style="text-align:center;margin-bottom:1rem;">Календарь дней рождений PG78</h1>
+      <div class="year-navigation">
+        <button id="prev-year" class="glow-on-hover">◀</button>
+        <span id="current-year"></span>
+        <button id="next-year" class="glow-on-hover">▶</button>
+      </div>
+      <div class="calendar-wrapper">
+        <aside class="calendar__sidebar">
+          <div class="content">
+            <h2 class="sidebar__heading">Ближайшие дни рождения</h2>
+            <ul id="upcoming-list" class="sidebar__list"></ul>
+          </div>
+        </aside>
+        <div id="all-calendars"></div>
+      </div>
+    </main>
+
+    <div class="overlay" id="overlay"></div>
+    <div class="birthday-popup" id="birthday-popup">
+      <span class="close" id="close-popup">&times;</span>
+      <div id="popup-content"></div>
+    </div>
   </div>
 
   <script src="pages/pgCALENDAR/calendar_script.js"></script>
 </body>
 </html>
-
 
