--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="moon-phase" id="moonPhase"></div>
     <h1>🧭 Хаб PG78</h1>
     <div class="links">
-      <a class="link-card" href="https://jonibak2.github.io/birthday-calendar/">
+      <a class="link-card" href="https://jonibak2.github.io/PG78HUB-REBORN/calendar/">
         <span>🎂 Календарь дней рождений</span>
         <div>Следи за праздниками ПГшеров</div>
       </a>
@@ -66,3 +66,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
