--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
       </a>
       
       <div class="split-container">
-        <a class="link-card" href="https://jonibak2.github.io/PGA23/">
+        <a class="link-card" href="https://jonibak2.github.io/PG78HUB-REBORN/PGA23">
           <span>🎇 PGA23</span>
           <div>Номинации 2023</div>
         </a>
-        <a class="link-card" href="https://jonibak2.github.io/PGA24/">
+        <a class="link-card" href="https://jonibak2.github.io/PG78HUB-REBORN/PGA24">
           <span>🩸 PGA24</span>
           <div>Номинации 2024</div>
         </a>
@@ -66,4 +66,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
