--- a/index.html
+++ b/index.html
@@ -38,12 +38,21 @@
         </a>
       </div>
 
-      <div class="single-card-container">
-        <a class="link-card" href="https://jonibak2.github.io/PGA25/">
-          <span>💛 PGA25</span>
+      <div class="split-container">
+        <a class="link-card" href="https://jonibak2.github.io/PG78HUB-REBORN/PGA25">
+          <span>❤️‍🔥 PGA25</span>
           <div>Номинации 2025</div>
         </a>
+        <a class="link-card disabled" href="#">
+          <span>🥶 PGA26</span>
+          <div>Номинации 2026</div>
+        </a>
       </div>
+
+      <a class="link-card" href="https://jonibak2.github.io/PG78HUB-REBORN/mafia.html">
+        <span>♠️ Инструмент для мафии</span>
+        <div>Инструмент для ведущего мафии</div>
+      </a>
     </div>
     <footer>
       © PG78
